# QT

./: .gitignore  README.md
Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
SQL_FILES/: SQL.pro  main.cpp
Threads_Runnable/: CMakeLists.txt  main.cpp  tasknumber.cpp  tasknumber.h
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Calculator  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-54c34b8c961390880ab7.json  cmakeFiles-v1-f36e5f4b4f2558d3c698.json  codemodel-v2-a5276a7225488a1428df.json  directory-.-Debug-c34cd39634a5b035514c.json  (+4 more)
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/: deps
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-Calculator-Desktop_Qt_6_5_0_GCC_64bit-Debug/Calculator_autogen/include/: ui_mainwindow.h
build-Threads_Runnable-Desktop_Qt_6_5_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Threads_Runnable  build.ninja  cmake_install.cmake
build-Threads_Runnable-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Threads_Runnable-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Threads_Runnable-Desktop_Qt_6_5_0_GCC_64bit-Debug/Threads_Runnable_autogen/: deps
(+234 files in other folders)
